--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/DySweb/Home.html">DyS Web</a>
+            <a class="navbar-brand" href="https://jjffbb.github.io/DySweb/Home.html">DyS Web</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               
