--- a/Interventoria.html
+++ b/Interventoria.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/Index.html">DyS Web</a>
+          <a class="navbar-brand" href="https://jjffbb.github.io/DySweb/Index.html">DyS Web</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
