--- a/Interventoria.html
+++ b/Interventoria.html
@@ -15,14 +15,14 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://jjffbb.github.io/DySweb">DyS Web</a>
+          <a class="navbar-brand" href="https://jjffbb.github.io/DySweb/Index.html">DyS Web</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://jjffbb.github.io/DySweb/Home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/Home.html">Link</a>
