--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="https://jjffbb.github.io/DySweb/Home.html">DyS Web</a>
+            <a class="navbar-brand" href="https://jjffbb.github.io/DySweb/Index.html">DyS Web</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="https://jjffbb.github.io/DySweb/Home.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="https://jjffbb.github.io/DySweb/Interventoria.html">Link</a>
