--- a/Index.html
+++ b/Index.html
@@ -160,6 +160,15 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    <div id="data"></div>
+    <label for="name">Nombre:</label>
+    <input type="text" id="name">
+    <br>
+    <label for="age">Edad:</label>
+    <input type="number" max="100" id="age">
+    <br>
+    <button id="sendInfo">Enviar :)</button>
+    <script src="https://github.com/jjffbb/DySweb/code.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
