--- a/Index.html
+++ b/Index.html
@@ -168,7 +168,7 @@
     <input type="number" max="100" id="age">
     <br>
     <button id="sendInfo">Enviar :)</button>
-    <script src="https://github.com/jjffbb/DySweb/code.js"></script>
+    <script src="https://github.com/jjffbb/DySweb/site.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
